--- a/Cherry/Cherry.csproj
+++ b/Cherry/Cherry.csproj
@@ -52,8 +52,8 @@
 			<HintPath>$(BeatSaberDir)\Plugins\BSML.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="CatCore">
-		  <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Beat Saber\Libs\CatCore.dll</HintPath>
+		<Reference Include="ChatCore">
+		  <HintPath>$(BeatSaberDir)\Libs\ChatCore.dll</HintPath>
 		</Reference>
 		<Reference Include="GameplayCore">
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
