--- a/Cherry/manifest.json
+++ b/Cherry/manifest.json
@@ -5,11 +5,11 @@
   "author": "Auros",
   "version": "1.1.0",
   "description": "A lightweight chat-based song request mod.",
-  "gameVersion": "1.19.0",
+  "gameVersion": "1.21.0",
   "dependsOn": {
     "BSIPA": "^4.1.4",
     "SongCore": "^3.0.0",
     "SiraUtil": "^3.0.0",
-    "CatCore": "^0.0.1-alpha"
+    "ChatCore": "^2.1.2"
   }
 }
